# azure-iot-gateway-sdk

./: CMakeLists.txt
bindings/: CMakeLists.txt
bindings/dotnet/: CMakeLists.txt
bindings/dotnet/dotnet-binding/Microsoft.Azure.IoT.Gateway/: Microsoft.Azure.IoT.Gateway.csproj
bindings/dotnet/dotnet-binding/Microsoft.Azure.IoT.Gateway/Hosting/: HostManager.cs  HostManagerResult.cs
bindings/dotnet/inc/: dotnet.h  pinvoke.h
bindings/dotnet/src/: dotnet.cpp  dotnet_hl.c  pinvoke.cpp
bindings/dotnetcore/: CMakeLists.txt
bindings/dotnetcore/dotnetcore-binding/: dotnetcore-binding.sln
bindings/dotnetcore/dotnetcore-binding/Microsoft.Azure.IoT.Gateway/: GatewayHost.cs  GatewayModule.cs  Message.cs  MessageBus.cs  Microsoft.Azure.IoT.Gateway.xproj  NativeMethods.cs  project.json  project.lock.json
bindings/dotnetcore/dotnetcore-binding/Microsoft.Azure.IoT.Gateway.Test/: MessageUnitTests.cs  Microsoft.Azure.IoT.Gateway.Test.xproj  project.json  project.lock.json
bindings/dotnetcore/dotnetcore-binding/Microsoft.Azure.IoT.Gateway.Test/Properties/: AssemblyInfo.cs
bindings/dotnetcore/dotnetcore-binding/Microsoft.Azure.IoT.Gateway/Properties/: AssemblyInfo.cs
bindings/dotnetcore/dotnetcore-binding/PrinterModule/: DotNetCorePrinterModule.cs  PrinterModule.xproj  project.json  project.lock.json
bindings/dotnetcore/dotnetcore-binding/PrinterModule/Properties/: AssemblyInfo.cs
bindings/dotnetcore/dotnetcore-binding/SensorModule/: DotNetCoreSensorModule.cs  SensorModule.xproj  project.json  project.lock.json
bindings/dotnetcore/dotnetcore-binding/SensorModule/Properties/: AssemblyInfo.cs
bindings/dotnetcore/inc/: dotnetcore.h  dotnetcore_hl.h
bindings/dotnetcore/src/: dotnetcore.cpp  dotnetcore_hl.c
bindings/dotnetcore/tests/: CMakeLists.txt
bindings/dotnetcore/tests/dotnetcore_unittests/: CMakeLists.txt  main.c
bindings/nodejs/: CMakeLists.txt
core/: CMakeLists.txt
modules/: CMakeLists.txt
modules/amqpserver/: CMakeLists.txt  README.md
modules/amqpserver/inc/: amqpserver.h
modules/amqpserver/src/: amqpserver.c
modules/iothubhttp/devdoc/: iothubhttp.md  iothubhttp_hl.md
modules/iothubhttp/inc/: iothubhttp.h
modules/iothubhttp/src/: iothubhttp.c  iothubhttp_hl.c
modules/iothubhttp/tests/iothubhttp_hl_unittests/: iothubhttp_hl_unittests.cpp
modules/iothubhttp/tests/iothubhttp_unittests/: iothubhttp_unittests.cpp
samples/opc_poc/: CMakeLists.txt
samples/opc_poc/src/: main.c  module_config_linux.c  module_config_windows.c
tools/: ConvertTo-Utf8.ps1  build.cmd  build.sh  build_dotnet.cmd  convert-to-utf8.cmd
